# RomiPi

./: .gitignore  README.ROS.md  README.md  README.setup.md  README.setup.rtf  Romi Operation.perspective
Arduino/Romi-NoRpi-Debug/: Romi-NoRpi-Debug.ino  motor.h  motor_hardware.ino  odometry.ino  timing.ino
Arduino/Romi-RPi-I2CSlave/: Romi-RPi-I2CSlave.ino  motor.h  motor_cmd_twist.ino  motor_hardware.ino  motor_pid_control.ino  timing.ino  watchdog.ino
ROS_WS/src/: README.md
ROS_WS/src/RomiHWDriver/: README.md  base.py
ROS_WS/src/romipi/romipi_astar/launch/: romipi_astar.launch
ROS_WS/src/romipi/romipi_astar/scripts/: .romipi_astar.py.swp
ROS_WS/src/romipi/romipi_bringup/: CMakeLists.txt
ROS_WS/src/romipi/romipi_bringup/launch/: romipi_remote.launch
ROS_WS/src/romipi/romipi_bringup/launch/includes/: description.launch.xml
ROS_WS/src/romipi/romipi_bringup/scripts/: create_udev_rules
ROS_WS/src/romipi/romipi_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
ROS_WS/src/romipi/romipi_description/meshes/bases/: burger_castor.stl  romi_right_wheel.stl
ROS_WS/src/romipi/romipi_fake/: CMakeLists.txt  package.xml
ROS_WS/src/romipi/romipi_fake/include/romipi_fake/: romipi_fake.h
ROS_WS/src/romipi/romipi_fake/src/: romipi_fake.cpp
ROS_WS/src/romipi/romipi_gazebo/: CHANGELOG.rst  CMakeLists.txt  package.xml
ROS_WS/src/romipi/romipi_gazebo/launch/: romipi_simulation.launch  romipi_world.launch
ROS_WS/src/romipi/romipi_gazebo/models/romipi/: model.sdf
ROS_WS/src/romipi/romipi_i2c/: CHANGELOG.rst
ROS_WS/src/romipi/romipi_i2c/scripts/: a_star.py
ROS_WS/src/romipi/romipi_navigation/: CHANGELOG.rst
ROS_WS/src/romipi/romipi_simulations/: package.xml
ROS_WS/src/romipi/romipi_teleop/: package.xml
ROS_WS/src/romipi/romipi_teleop/launch/: romipi_teleop_ds4_joy.launch  romipi_teleop_key.launch
examples/: keyboard_motor_control.py  light_test.py  motor_test.py  motor_utility.py  movement_test.py  passive_pose_test.py  pixel_utility.py
pi/: .a_star.py.swp  .client_instructor.py.swp  .server.py.swp  a_star.py  client_instructor.py  keyboard_motor_control.py  light_test.py  motor_test.py  motor_utility.py  passive_pose_test.py  pixel_utility.py  romipi_driver.py  ros-package-list  ros_battery_node.py  server.py  test_driver.py
romipi_astar/: CMakeLists.txt  package.xml  setup.py
romipi_astar/launch/: romipi_astar.launch
romipi_astar/nodes/: romipi_astar_node.py
romipi_astar/src/: romipi_astar_node.py
romipi_astar/src/romipi_astar/: romipi_driver.py
romipi_bringup/: CHANGELOG.rst  package.xml
romipi_bringup/launch/: romipi_core.launch  romipi_model.launch  romipi_robot.launch  romipi_rpicamera.launch
romipi_bringup/src/: romipi_diagnostics.cpp
romipi_captain/: CMakeLists.txt  package.xml  setup.py
romipi_captain/scripts/: .romipi_captain_node.swp  romipi_captain_node
romipi_description/: CMakeLists.txt
romipi_description/meshes/: romi-chassis-mesh-mixer.mix
romipi_description/meshes/bases/: burger_base.stl  romi-left-wheel.stl  romi_base.stl
romipi_description/meshes/wheels/: romi-back-castor.stl  romi-left-wheel.stl
romipi_description/rviz/: model.rviz
romipi_description/urdf/: lidar.xacro  romipi.gazebo.xacro  romipi.urdf.xacro  simple_camera.urdf.xacro
romipi_fake/: CHANGELOG.rst
romipi_fake/include/romipi_fake/: romipi_fake.h
romipi_fake/launch/: romipi_fake.launch
romipi_fake/rviz/: romipi_fake.rviz
romipi_fake/src/: romipi_fake.cpp
romipi_fiducials/: CMakeLists.txt  TODO  mainpage.dox  manifest.xml  package.xml  setup.py
romipi_fiducials/launch/: aruco_detect.launch  romipi_fiducials.launch
romipi_fiducials/scripts/: romipi_fiducials  romipi_fiducials.py
romipi_fiducials/src/romipi_fiducials/: board_dictionary.py  board_poser.py  get_pose_service.py  pose.py  store_poses.py
romipi_fiducials/srv/: GetPose.srv  GetVisible.srv
romipi_formations/: CMakeLists.txt  package.xml  setup.py
romipi_formations/scripts/: romipi_formations_node
romipi_formations/src/romipi_formations/constraint/: ConstraintMapper.py  Formation.py  FormationLibrary.py  test_formation.py
romipi_gazebo/include/romipi_gazebo/: romipi_drive.h
romipi_gazebo/launch/: romipi_empty_world.launch  romipi_world.launch
romipi_gazebo/models/romipi/: model-1_4.sdf  model.config
romipi_gazebo/models/romipi_world/: model-1_4.sdf  model.sdf
romipi_gazebo/src/: romipi_drive.cpp
romipi_gazebo/worlds/: romipi_world.world
romipi_i2c/: CMakeLists.txt  package.xml
romipi_i2c/include/romipi_i2c/: romipi_i2c.h
romipi_i2c/launch/: romipi_i2c.launch
romipi_i2c/scripts/: base.py  romi_i2c.py
romipi_i2c/src/: romipi_i2c.cpp
romipi_msgs/: CMakeLists.txt  package.xml
romipi_msgs/msg/: NameList.msg  RomiPose.msg
romipi_multibot/: CMakeLists.txt  README.md  package.xml  setup.py
romipi_multibot/src/romipi_multibot/: romipi_multibot.py
romipi_navigation/: CMakeLists.txt  README  package.xml
romipi_navigation/launch/: amcl.launch  move_base.launch  romipi_navigable.launch  romipi_navigation.launch
romipi_navigation/maps/: map.yaml
romipi_navigation/param/: costmap_common_params_romipi.yaml  dwa_local_planner_params_romipi.yaml  local_costmap_params.yaml
romipi_navigation/rviz/: romipi_navigation.rviz
romipi_simulations/: CMakeLists.txt
romipi_teleop/: CHANGELOG.rst  CMakeLists.txt  README.md  setup.py
romipi_teleop/config/: ds4.config.yaml  logitech.config.yaml
romipi_teleop/launch/: romipi_teleop_ds4_joy.launch  romipi_teleop_logitech_extreme3dpro.launch
romipi_teleop/nodes/: romipi_teleop_key
romipi_wave/: CMakeLists.txt  package.xml  setup.py
romipi_wave/launch/: romipi_wave.launch
romipi_wave/scripts/: romipi_wave_node
romipi_wave/src/romipi_wave/: activity_manager.py  broadcast.py  wave.py
romipi_wave/srv/: GetWave.srv  IsActive.srv
sketch_arduino/Romi-RPi-I2CSlave/: Romi-RPi-I2CSlave.ino  hardware.ino  lights.ino  motor.h  motor_cmd_twist.ino  motor_hardware.ino  motor_pid_control.ino  motors.ino  odometry.ino  pid_control.ino  timing.ino
(+2 files in other folders)
