<?xml version="1.0"?>
<package format="2">
  <name>romipi_multibot</name>
  <version>0.0.1</version>
  <description>
    scripts for facilitating multi-robotic behaviors for groups of RomiPi robots
  </description>
  <license>Apache 2.0</license>
  <maintainer email="pklemper@mtholyoke.edu">Peter F. Klemperer</maintainer>
  <url type="repository">https://github.com/ftPeter/RomiPi</url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

</package>
