<?xml version="1.0"?>
<package format="2">
  <name>romipi_navigation</name>
  <version>0.0.1</version>
  <description>
    The romipi_navigation provides roslaunch scripts for starting the navigation.
  </description>
  <license>Apache 2.0</license>
  <maintainer email="pklemper@mtholyoke.edu">Peter F> Klemperer</maintainer>
  <url type="repository">https://github.com/ftPeter/multi-robotics</url>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>amcl</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>romipi_bringup</exec_depend>
</package>
