<?xml version="1.0"?>
<package format="2">
  <name>romipi_gazebo</name>
  <version>0.0.1</version>
  <description>
    Gazebo simulation package for the RomiPI 
  </description>
  <license>Apache 2.0</license>
  <maintainer email="pklemper@mtholyoke.edu">Peter F. Klemperer</maintainer>
  <url type="repository">https://github.com/ftPeter/multi-robotics</url>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf</depend>
  <depend>gazebo_ros</depend>
  <exec_depend>gazebo</exec_depend>
  <export>
    <gazebo_ros plugin_path="${prefix}/lib:${prefix}/models/romipi_autorace/gazebo_traffic_plugin" gazebo_media_path="${prefix}" gazebo_model_path="${prefix}/models:${prefix}/models/turtlebot3_autorace"/>
  </export>
</package>
