<?xml version="1.0"?>
<package format="2">
  <name>romipi_simulations</name>
  <version>1.0.2</version>
  <description>
    ROS packages for the RomiPi simulation (meta package)
  </description>
  <license>Apache 2.0</license>
  <author email="pyo@robotis.com">Pyo</author>
  <author email="thlim@robotis.com">Darby Lim</author>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <url type="repository">https://github.com/ROBOTIS-GIT/romipi_simulations</url>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>romipi_fake</exec_depend>
  <exec_depend>romipi_gazebo</exec_depend>
  <export><metapackage/></export>
</package>
